--- a/css/styles.css
+++ b/css/styles.css
@@ -480,6 +480,48 @@ section {
   fill: #f4f4fd;
 }
 
+.footer-email-wrap {
+  margin-left: 80px;
+}
+
+.footer-email {
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  fill: none;
+  background-color: transparent;
+  outline: transparent;
+  padding: 8px 16px;
+}
+.footer-email::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
+  margin-left: 16px;
+}
+
+.subscribe-button {
+  border-radius: 4px;
+  padding: 8px 24px;
+  min-width: 165px;
+  background-color: #4d5ae5;
+  border: none;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscripe-icon {
+  fill: #fff;
+}
+
 .backdrop {
   width: 100%;
   height: 100%;
