--- a/css/styles.css
+++ b/css/styles.css
@@ -483,6 +483,10 @@ section {
 .footer-email-wrap {
   margin-left: 80px;
 }
+.footer-subscripe {
+  display: flex;
+  gap: 24px;
+}
 
 .footer-email {
   border: 1px solid #fff;
@@ -492,8 +496,15 @@ section {
   fill: none;
   background-color: transparent;
   outline: transparent;
-  padding: 8px 16px;
+  padding-left: 16px;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  color: #ffffff;
+  margin-top: 16px;
 }
+
 .footer-email::placeholder {
   font-weight: 400;
   font-size: 12px;
@@ -501,12 +512,18 @@ section {
   letter-spacing: 0.04em;
   color: #fff;
   margin-left: 16px;
+  color: #ffffff;
 }
 
 .subscribe-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
   border-radius: 4px;
   padding: 8px 24px;
   min-width: 165px;
+  height: 40px;
   background-color: #4d5ae5;
   border: none;
   font-weight: 500;
@@ -518,8 +535,14 @@ section {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.subscribe-button:hover,
+.subscribe-button:focus {
+  background-color: #404bbf;
+}
+
 .subscripe-icon {
   fill: #fff;
+  margin-left: 16px;
 }
 
 .backdrop {
@@ -531,6 +554,8 @@ section {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-open {
@@ -548,20 +573,29 @@ section {
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 72px 24px 24px 24px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .modal-close {
   position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   top: 24px;
   right: 24px;
-  border-radius: 100%;
+  border-radius: 50%;
   background-color: #e7e9fc;
   border: transparent;
   width: 24px;
   height: 24px;
   border: transparent;
+  padding: 0;
   stroke-width: 1px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close:hover,
@@ -569,6 +603,10 @@ section {
   background-color: #404bbf;
   fill: #fff;
   border: none;
+}
+
+.cross-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-title {
@@ -590,7 +628,7 @@ section {
   border: 1px solid rgba(46, 47, 66, 0.4);
   padding-left: 38px;
   outline: transparent;
-  transition: border 250ml cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:hover,
@@ -608,12 +646,13 @@ section {
 }
 
 .modal-lable {
-  display: flex;
+  display: block;
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.04em;
   color: #8e8f99;
   margin-bottom: 4px;
+  line-height: 1.17;
 }
 
 .modal-input-wrap {
@@ -636,11 +675,14 @@ section {
   border-radius: 4px;
   background-color: transparent;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  padding-left: 16px;
-  padding-top: 8px;
+  padding: 8px 16px;
   outline: transparent;
-  transition: border 250ml cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   resize: none;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
 }
 
 .modal-text:hover,
@@ -663,6 +705,10 @@ textarea::placeholder {
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
 }
+
+.modal-field-checkbox {
+  margin-bottom: 24px;
+}
 .policy-text {
   font-weight: 400;
   font-size: 12px;
@@ -671,9 +717,14 @@ textarea::placeholder {
   color: #8e8f99;
   display: flex;
   justify-items: center;
+  line-height: 1.17;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
 }
 
-.policy-text span {
+.policy-icon-wrap {
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   width: 16px;
@@ -695,6 +746,6 @@ textarea::placeholder {
 
 .modal-check:checked + .policy-text span {
   background-color: #404bbf;
-  border: 1px solid #404bbf;
   fill: #f4f4fd;
+  border: none;
 }
