--- a/css/styles.css
+++ b/css/styles.css
@@ -483,6 +483,15 @@ section {
 .footer-email-wrap {
   margin-left: 80px;
 }
+.footer-modal-subtitle {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+
 .footer-subscripe {
   display: flex;
   gap: 24px;
@@ -502,7 +511,6 @@ section {
   letter-spacing: 0.04em;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   color: #ffffff;
-  margin-top: 16px;
 }
 
 .footer-email::placeholder {
