last 5 footer mistakes

--- a/css/styles.css
+++ b/css/styles.css
@@ -674,7 +674,7 @@ section {
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
-  transition: border 250ml cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-text {
@@ -733,6 +733,7 @@ textarea::placeholder {
 }
 
 .policy-icon-wrap {
+  display: inline-flex;
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   width: 16px;
@@ -740,9 +741,11 @@ textarea::placeholder {
   margin-right: 8px;
   fill: transparent;
   background-color: transparent;
-  display: inline-flex;
   align-items: center;
   justify-content: center;
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .privacy-text {
