--- a/css/styles.css
+++ b/css/styles.css
@@ -729,7 +729,6 @@ textarea::placeholder {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: inline-flex;
 }
 
 .policy-icon-wrap {
@@ -743,7 +742,7 @@ textarea::placeholder {
   background-color: transparent;
   align-items: center;
   justify-content: center;
-  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
