--- a/css/styles.css
+++ b/css/styles.css
@@ -497,7 +497,7 @@ section {
   gap: 24px;
 }
 
-.footer-email {
+.user-email-address {
   border: 1px solid #fff;
   border-radius: 4px;
   width: 264px;
@@ -513,7 +513,7 @@ section {
   color: #ffffff;
 }
 
-.footer-email::placeholder {
+.user-email-address::placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 2;
