--- a/css/styles.css
+++ b/css/styles.css
@@ -723,7 +723,6 @@ textarea::placeholder {
   line-height: 1.16;
   letter-spacing: 0.04em;
   color: #8e8f99;
-  display: flex;
   justify-items: center;
   line-height: 1.17;
 }
@@ -739,7 +738,7 @@ textarea::placeholder {
   background-color: transparent;
   align-items: center;
   justify-content: center;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
